crates/oxc_react_compiler/tests/snapshots/ts-enum-inline-captured-binding.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/ts-enum-inline-captured-binding.tsx
---
function Component(props: {
	value: number;
}) {
	function Inner() {
		enum NumberValue {
			Value = props.value
		}
		return <span>{NumberValue.Value}</span>;
	}
	return <Inner />;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ value: 1 }]
};
