crates/oxc_react_compiler/tests/snapshots/ts-enum-inline-member-reference.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/ts-enum-inline-member-reference.tsx
---
import { c as _c } from "react/compiler-runtime";
function Component(props) {
	const $ = _c(2);
	enum NumberValue {
		First = 1,
		Second = First
	}
	const t0 = NumberValue.Second + props.value;
	let t1;
	if ($[0] !== t0) {
		t1 = <span>{t0}</span>;
		$[0] = t0;
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	return t1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ value: 1 }]
};
