crates/oxc_react_compiler/tests/snapshots/ts-enum-inline-merged.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/ts-enum-inline-merged.tsx
---
import { c as _c } from "react/compiler-runtime";
function Component() {
	const $ = _c(1);
	enum NumberValue {
		First = 1
	}
	enum NumberValue {
		Second = 2
	}
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = <span>{NumberValue.First + NumberValue.Second}</span>;
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: []
};
