crates/oxc_react_compiler/tests/snapshots/ts-enum-inline-reactive-member.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/ts-enum-inline-reactive-member.tsx
---
import { c as _c } from "react/compiler-runtime";
function Component(props) {
	const $ = _c(1);
	enum NumberValue {
		Value = props.value
	}
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = <span>{NumberValue.Value}</span>;
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ value: 1 }]
};
