crates/oxc_react_compiler/tests/snapshots/ts-enum-inline-shadowed-local.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/ts-enum-inline-shadowed-local.tsx
---
function Component(value: number) {
	{
		const value = 42;
		enum NumberValue {
			Value = value
		}
		return <span>{NumberValue.Value}</span>;
	}
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [0]
};
