crates/oxc_react_compiler/tests/snapshots/ts-enum-inline-switch-case.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/ts-enum-inline-switch-case.tsx
---
import { c as _c } from "react/compiler-runtime";
function Component(props) {
	const $ = _c(2);
	enum Action {
		Select
	}
	switch (props.action) {
		case String(Action.Select): {
			let t0;
			if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
				t0 = <span>selected</span>;
				$[0] = t0;
			} else {
				t0 = $[0];
			}
			return t0;
		}
		default: {
			let t0;
			if ($[1] === Symbol.for("react.memo_cache_sentinel")) {
				t0 = <span>unknown</span>;
				$[1] = t0;
			} else {
				t0 = $[1];
			}
			return t0;
		}
	}
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ action: "0" }]
};
