crates/oxc_react_compiler/tests/snapshots/ts-enum-inline-unused-side-effect.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/ts-enum-inline-unused-side-effect.tsx
---
import { c as _c } from "react/compiler-runtime";
function createValue(value: number): number {
	return value;
}
function Component(props) {
	const $ = _c(2);
	enum Unused {
		Value = createValue(props.value)
	}
	let t0;
	if ($[0] !== props.value) {
		t0 = <span>{props.value}</span>;
		$[0] = props.value;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	return t0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ value: 1 }]
};
