crates/oxc_react_compiler/tests/snapshots/ts-enum-inline.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/ts-enum-inline.tsx
---
function Component(props) {
	enum Bool {
		True = "true",
		False = "false"
	}
	let bool: Bool = Bool.False;
	if (props.value) {
		bool = Bool.True;
	}
	return <div>{bool}</div>;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ value: true }]
};
