crates/oxc_react_compiler/tests/snapshots/ts-import-equals-declaration.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/ts-import-equals-declaration.ts
---
import { c as _c } from "react/compiler-runtime";
import lib = require("shared-runtime");
function useValue(value) {
	const $ = _c(2);
	let t0;
	if ($[0] !== value) {
		t0 = lib.identity(value);
		$[0] = value;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	return t0;
}
